--- a/style.css
+++ b/style.css
@@ -1,7 +1,30 @@
 .container{
     display: flex;
+    justify-content: space-evenly;
+    height: 600px;
+    width: 600px;
+    /*outline:1px solid black ; */
+    box-shadow: 6px 6px red, -1em 0 .4em blueviolet;
+
 }
 
-.grid {
-    outline: 1px solid green;
+.column {
+ /*  outline: 1px solid green; */
+    flex-grow: 1;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    
+}
+
+.row{
+    min-height: 20px;
+    min-width: 20px;
+    flex-grow: 1;
+
+}
+
+.row:hover{
+   /* background-color: black; */
+    
 }
