--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .container{
     display: flex;
     justify-content: space-evenly;
@@ -18,13 +25,13 @@
 }
 
 .row{
-    min-height: 20px;
-    min-width: 20px;
+    /*outline: 1px solid green;*/
+    min-height: 10px;
+    min-width: 10px;
     flex-grow: 1;
 
 }
 
 .row:hover{
-   /* background-color: black; */
-    
+ /*  background-color: black; */
 }
